<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/CollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapse_toolbar_height"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="10dp"
            app:expandedTitleMarginStart="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:collapsedTitleTextAppearance="@style/CollapseTitle">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/photo_slider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/animal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#14181a"
                tools:text="Kipper"/>

            <TextView
                android:id="@+id/animal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#8f14181a"
                tools:text="Young - Female - Terrier &amp; Chihuahua"/>

            <TextView
                android:id="@+id/animal_adoptable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#8f14181a"
                tools:text="Adoptable at East Bay SPCA "
                />

            <TextView
                android:id="@+id/animal_update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#8f14181a"
                tools:text="Intake date 1/8/2017"
                />

            <TextView
                android:id="@+id/animal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#8f14181a"
                android:lineSpacingExtra="2.8sp"
                tools:text="@string/pet_description_text"/>

            <TextView
                android:id="@+id/shelter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#8f14181a"
                tools:text="East Bay SPCA "/>

            <TextView
                android:id="@+id/shelter_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="#8f14181a"
                tools:text="4651 Gleason Dr, Dublin, CA 94568 "/>

            <TextView
                android:id="@+id/shelter_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="#0097a7"
                tools:text="(925) 479-9670"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/bt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pet_detail_button_green"
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:text="@string/shelter_email">
                </Button>

                <Button
                    android:id="@+id/bt_get_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pet_detail_button_green"
                    android:layout_marginStart="8dp"
                    android:padding="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:text="@string/shelter_direction">
                </Button>

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>